# Hermes-Agent

./: .gitignore  Dockerfile  check_plugins.js  cli.py  docker-compose.yml  extract_jobs.py  fetch_models.py  hermes_state.py  package-lock.json  pyproject.toml
.github/workflows/: docker.yml  lint.yml
agent/: agent_init.py  prompt_builder.py  system_prompt.py  turn_context.py
gateway/: run.py  slash_commands.py
hermes/agent/: evolution.py  soul_engine.py
hermes/api/: main.py
hermes/core/: config.py  idle_loop.py  model_router.py
hermes/graph/: graph.py  nodes.py
hermes/memory/: chroma_store.py  graph_store.py  hybrid_memory.py  hybrid_store.py  sqlite_store.py
hermes/scheduler/: cron.py  digest_renderer.py  research_blueprint.py  source_scrapers.py
hermes/skills/: curator.py  curator_metrics.py  manager.py
hermes/subagents/: spawner.py
hermes/tools/: code_exec.py  computer_use.py  graph_memory.py  obsidian.py  registry.py  search.py  smart_home.py
hermes_cli/: cli_commands_mixin.py  commands.py
scripts/: deploy_vps.sh
tests/: run_all_implemented_tests.py  test_code_exec_sandbox.py  test_cognitive_memory.py  test_evolution_mutation.py  test_hybrid_store.py  test_phase1.py  test_phase2.py  test_proactive_daemon.py  test_proxy_sandbox.py  test_research_blueprint.py  test_rluc_corrections.py  test_self_healing.py  test_skill_curator.py  test_soul_engine.py  test_spawner_dag.py  test_stateful_sandbox.py
