[project]
name = "hermes-agent"
version = "0.17.0"
requires-python = ">=3.11"

dependencies = [
    # Core agent framework
    "fire>=0.6.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0.0",
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    # Search tools
    "duckduckgo-search>=7.0.0",
    "tavily-python>=0.5.0",
    "wikipedia-api>=0.7.0",
    "arxiv>=2.1.0",
    "crawl4ai>=0.5.0",
    # Memory & Vector store
    "chromadb>=0.6.0",
    "sentence-transformers>=3.3.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "psutil>=6.0.0",
    "sympy>=1.13.0",
    "gitpython>=3.1.0",
    "rich>=13.9.0", # pretty terminal output
    "langgraph-checkpoint-sqlite>=3.1.0",
    "wikipedia>=1.4.0",
    "dspy-ai>=2.0.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "discord-py>=2.3.0",
    "slack-sdk>=3.27.0",
    # Voice Interface
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.9",
    "pygame>=2.6.0",
    # Computer Vision
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    # Deep Graph Memory
    "networkx>=3.0",
    # Proactive Autonomy
    "psutil>=5.9.0"
]
